# nird-s3-sync

./: .flake8  .gitignore  .readthedocs.yaml  AUTHORS.rst  LICENSE  README.rst  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
docs/: conf.py  index.rst  requirements.txt
docs/_build/doctrees/: authors.doctree  environment.pickle  index.doctree  license.doctree  readme.doctree
docs/_build/doctrees/source/api/: modules.doctree  nird_s3_sync.doctree
docs/_build/html/: .buildinfo  authors.html  genindex.html  index.html  license.html  objects.inv  py-modindex.html  readme.html  search.html  searchindex.js
docs/_build/html/source/api/: modules.html  nird_s3_sync.html
docs/source/api/: modules.rst  nird_s3_sync.rst
nird_s3_sync/: __init__.py  io.py  utils.py
tests/: conftest.py
tests/test_nird_s3_sync/: test_io.py  test_utils.py
